--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,4 @@
-API_BASE_URL=
-API_KEY=
-DEV_DOMAIN=
-PROD_DOMAIN=
-PORT=
-PROD_PORT=
-ACCESS_TOKEN_SECRET=
-REFRESH_TOKEN_SECRET=
+API_KEY=abcdefghijklmnopqrstuvwxyz
+PORT=3000
+ACCESS_TOKEN_SECRET=abcdefghijklmnopqrstuvwxyz
+REFRESH_TOKEN_SECRET=abcdefghijklmnopqrstuvwxyz
