--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
