--- a/.github/workflows/notify-builders.yml
+++ b/.github/workflows/notify-builders.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Repository Dispatch
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.ContechOS-deploy-pat }}
+          token: ${{ secrets.CI_TOKEN }}
           repository: nikolai4D/ContechOS
           event-type: push-build
           client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
